<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.registration.RegistrationRequestImageFragment">

    <ImageButton
        android:layout_width="@dimen/height_buttons"
        android:layout_height="@dimen/height_buttons"
        android:background="@color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_close_circle"
        android:foreground="@drawable/ripple_selector_dark_rad_28"
        app:tint="@color/white" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_launcher_icon_no_background"
        app:layout_constraintBottom_toTopOf="@id/txtTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_title"
        app:layout_constraintBottom_toTopOf="@id/txtDescription"
        android:layout_marginBottom="20dp"
        android:paddingStart="70dp"
        android:paddingEnd="70dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:fontFamily="@font/silka_bold"
        android:textSize="@dimen/size_txt_onboarding_title"
        />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_description"
        app:layout_constraintBottom_toTopOf="@id/btnRegister"
        android:layout_marginBottom="56dp"
        android:paddingStart="56dp"
        android:paddingEnd="56dp"
        android:textAlignment="center"
        android:alpha="0.5"
        android:textColor="@color/white"
        android:fontFamily="@font/silka_medium"
        android:textSize="@dimen/size_txt_onboarding_desc"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_buttons"
        android:background="@drawable/btn_rounded_primary"
        android:foreground="@drawable/ripple_selector_dark_rad_28"
        android:layout_marginBottom="16dp"
        android:text="@string/continue_to_registrationn"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        style="@style/ButtonStyle.Filled"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_buttons"
        android:background="@drawable/btn_rounded_primary"
        android:foreground="@drawable/ripple_selector_dark_rad_28"
        android:layout_marginBottom="30dp"
        android:text="@string/login_instead"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="56dp"
        style="@style/ButtonStyle.Filled"
        />

</androidx.constraintlayout.widget.ConstraintLayout>